# absence

./: .gitignore  README.md  pyproject.toml
configs/: candidate_template.yaml  example.yaml
docs/: chronic_model.md  modeling_principles.md  real_data_prd.md  short_horizon_model.md
scripts/: materialize.py  run_experiment.py
src/absence_modeling/: __init__.py  cli.py  config.py  contracts.py  evaluation.py  feature_groups.py  io.py  models.py  pipeline.py  preprocessing.py  reporting.py  scoring.py  search.py  tasks.py  utils.py
tests/: conftest.py  test_pipeline.py
